--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h2>Live Chat QA Test Page</h2>
-    <p>This is a free test page for the Falkon SMS live chat widget.</p>
+    <p>This is a free test new  page for the Falkon SMS live chat widget.</p>
 <script src="https://s3.us-central-1.wasabisys.com/falkonsms-develop/live-chat/widget.js?url=https://app.falkonchat.com/falkon-live-chat/69438bfc8d5ffc48f943a790" type="text/javascript"> </script>
     <!-- Paste your widget snippet below -->
     <!-- Example:
